--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.29.1)
 
-project(LightYearsCore
+project(LightYears
     VERSION 1.0.0
     LANGUAGES C CXX
 )
@@ -9,6 +9,20 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(LIGHT_YEARD_GAME_TARGET_NAME LightYearsGame)
+include(FetchContent)
+set(SFML_LIB_NAME SFML)
 
+FetchContent_Declare(
+    ${SFML_LIB_NAME}
+    GIT_REPOSITORY https://github.com/SFML/SFML
+    GIT_TAG 2.6.1
+    GIT_SHALLOW FALSE
+    )
+    
+FetchContent_MakeAvailable(${SFML_LIB_NAME})
+    
+set(LIGHT_YEARS_CORE_TARGET_NAME LightYearsCore)
+set(LIGHT_YEARS_GAME_TARGET_NAME LightYearsGame)
+
+add_subdirectory(LightYearsCore)
 add_subdirectory(LightYearsGame)
