--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -1,3 +1,23 @@
-add_executable(${LIGHT_YEARD_GAME_TARGET_NAME}
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
+add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/GameFramework/Game.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/GameFramework/Game.cpp
 )
+
+target_include_directories(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+
+target_link_libraries(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC ${LIGHT_YEARS_CORE_TARGET_NAME})
+
+
+function(CopyLibDirToTarget LIB_NAME TARGET_NAME)
+    add_custom_command(TARGET ${TARGET_NAME}
+    POST_BUILD
+    COMMAND
+    ${CMAKE_COMMAND} -E copy_directory
+    $<TARGET_FILE_DIR:${LIB_NAME}>
+    $<TARGET_FILE_DIR:${TARGET_NAME}>
+    )
+endfunction()
+
+CopyLibDirToTarget(${LIGHT_YEARS_CORE_TARGET_NAME} ${LIGHT_YEARS_GAME_TARGET_NAME})
