--- a/LightYearsCore/CmakeLists.txt
+++ b/LightYearsCore/CmakeLists.txt
@@ -1,6 +1,10 @@
 add_library(${LIGHT_YEARS_CORE_TARGET_NAME} STATIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/Core/EntryPoint.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/LightYears.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Core/EntryPoint.h
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/World.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/World.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/Application.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Application.cpp
 )
