--- a/LightYearsCore/CmakeLists.txt
+++ b/LightYearsCore/CmakeLists.txt
@@ -5,6 +5,9 @@ add_library(${LIGHT_YEARS_CORE_TARGET_NAME} STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/World.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/World.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/Object.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Object.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/Actor.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Actor.cpp
 
