--- a/LightYearsCore/CmakeLists.txt
+++ b/LightYearsCore/CmakeLists.txt
@@ -14,6 +14,9 @@ add_library(${LIGHT_YEARS_CORE_TARGET_NAME} STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/AssetManager.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/AssetManager.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Utility/Math.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Utility/Math.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/Application.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Application.cpp
 )
