--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -5,6 +5,15 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Spaceship/Spaceship.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Spaceship/Spaceship.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Weapon/Shooter.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Weapon/Shooter.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Weapon/BulletShooter.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Weapon/BulletShooter.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Weapon/Bullet.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Weapon/Bullet.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Player/PlayerSpaceship.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Player/PlayerSpaceship.cpp
 )
