--- a/LightYearsCore/CmakeLists.txt
+++ b/LightYearsCore/CmakeLists.txt
@@ -14,6 +14,9 @@ add_library(${LIGHT_YEARS_CORE_TARGET_NAME} STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/AssetManager.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/AssetManager.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/PhysicsSystem.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/PhysicsSystem.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Utility/Math.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Utility/Math.cpp
 
@@ -25,10 +28,32 @@ target_include_directories(${LIGHT_YEARS_CORE_TARGET_NAME} PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
+include(FetchContent)
+
+set(SFML_LIB_NAME SFML)
+FetchContent_Declare(
+    ${SFML_LIB_NAME}
+    GIT_REPOSITORY https://github.com/SFML/SFML
+    GIT_TAG 2.6.1
+    GIT_SHALLOW FALSE
+)
+FetchContent_MakeAvailable(${SFML_LIB_NAME})
+
 target_link_libraries(${LIGHT_YEARS_CORE_TARGET_NAME} PUBLIC sfml-graphics)
 target_link_libraries(${LIGHT_YEARS_CORE_TARGET_NAME} PUBLIC sfml-window)
 target_link_libraries(${LIGHT_YEARS_CORE_TARGET_NAME} PUBLIC sfml-system)
 target_link_libraries(${LIGHT_YEARS_CORE_TARGET_NAME} PUBLIC sfml-audio)
+
+set(BOX2D_LIB_NAME Box2D)
+FetchContent_Declare(
+    ${BOX2D_LIB_NAME}
+    GIT_REPOSITORY https://github.com/erincatto/box2d
+    GIT_TAG v2.4.1
+    GIT_SHALLOW FALSE
+)
+FetchContent_MakeAvailable(${BOX2D_LIB_NAME})
+
+target_link_libraries(${LIGHT_YEARS_CORE_TARGET_NAME} PUBLIC box2d)
 
 function(CopyLibToTarget LIB_NAME TARGET_NAME)
     add_custom_command(TARGET ${TARGET_NAME}
@@ -45,3 +70,4 @@ CopyLibToTarget(sfml-graphics ${LIGHT_YEARS_CORE_TARGET_NAME})
 CopyLibToTarget(sfml-window ${LIGHT_YEARS_CORE_TARGET_NAME})
 CopyLibToTarget(sfml-system ${LIGHT_YEARS_CORE_TARGET_NAME})
 CopyLibToTarget(sfml-audio ${LIGHT_YEARS_CORE_TARGET_NAME})
+CopyLibToTarget(box2d ${LIGHT_YEARS_CORE_TARGET_NAME})
