Implemented the HealthComponent

--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -14,6 +14,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Weapon/Bullet.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Weapon/Bullet.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Gameplay/HealthComponent.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Gameplay/HealthComponent.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Player/PlayerSpaceship.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Player/PlayerSpaceship.cpp
 )
