--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -17,6 +17,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Gameplay/HealthComponent.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Gameplay/HealthComponent.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/VFX/Explosion.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/VFX/Explosion.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Player/PlayerSpaceship.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Player/PlayerSpaceship.cpp
 )
