--- a/LightYearsCore/CmakeLists.txt
+++ b/LightYearsCore/CmakeLists.txt
@@ -29,6 +29,9 @@ add_library(${LIGHT_YEARS_CORE_TARGET_NAME} STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Utility/Math.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Utility/Math.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Gameplay/GameStage.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Gameplay/GameStage.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/Application.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Application.cpp
 )
