Implemented the TwinBlade Stage

--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -26,6 +26,12 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/Vanguard.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/Vanguard.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/TwinBlade.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/TwinBlade.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/TwinBladeStage.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/TwinBladeStage.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/VanguardStage.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/VanguardStage.cpp
 
