Added the Hexagon Stage

--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -38,6 +38,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/Hexagon.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/Hexagon.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/HexagonStage.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/HexagonStage.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
 
