--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -44,6 +44,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/UFO.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/UFO.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/UFOStage.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/UFOStage.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
 
