--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -11,6 +11,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Weapon/BulletShooter.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Weapon/BulletShooter.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Weapon/ThreeWayShooter.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Weapon/ThreeWayShooter.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Weapon/Bullet.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Weapon/Bullet.cpp
 
