--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -14,6 +14,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Weapon/ThreeWayShooter.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Weapon/ThreeWayShooter.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Weapon/FrontalWiper.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Weapon/FrontalWiper.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Weapon/Bullet.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Weapon/Bullet.cpp
 
