--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -62,6 +62,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Player/Player.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Player/Player.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Player/PlayerManager.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Player/PlayerManager.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Player/Reward.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Player/Reward.cpp
 )
