--- a/LightYearsCore/CmakeLists.txt
+++ b/LightYearsCore/CmakeLists.txt
@@ -37,6 +37,9 @@ add_library(${LIGHT_YEARS_CORE_TARGET_NAME} STATIC
 
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/Application.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Application.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Widget/HUD.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Widget/HUD.cpp
 )
 
 target_include_directories(${LIGHT_YEARS_CORE_TARGET_NAME} PUBLIC
