--- a/LightYearsCore/CmakeLists.txt
+++ b/LightYearsCore/CmakeLists.txt
@@ -43,6 +43,9 @@ add_library(${LIGHT_YEARS_CORE_TARGET_NAME} STATIC
 
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Widget/Widget.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Widget/Widget.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Widget/TextWidget.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Widget/TextWidget.cpp
 )
 
 target_include_directories(${LIGHT_YEARS_CORE_TARGET_NAME} PUBLIC
