--- a/LightYearsCore/CmakeLists.txt
+++ b/LightYearsCore/CmakeLists.txt
@@ -44,6 +44,9 @@ add_library(${LIGHT_YEARS_CORE_TARGET_NAME} STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Widget/Widget.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Widget/Widget.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Widget/ImageWidget.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Widget/ImageWidget.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Widget/TextWidget.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Widget/TextWidget.cpp
 
