--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -56,6 +56,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/MainMenuLevel.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/MainMenuLevel.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Player/PlayerSpaceship.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Player/PlayerSpaceship.cpp
 
@@ -70,6 +73,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
 
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Widget/GameplayHUD.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Widget/GameplayHUD.cpp
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Widget/MainMenuHUD.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Widget/MainMenuHUD.cpp
 )
 
 target_include_directories(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC
