Chaos Stage Setup

--- a/LightYearsGame/CmakeLists.txt
+++ b/LightYearsGame/CmakeLists.txt
@@ -47,6 +47,9 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/HexagonStage.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/HexagonStage.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/ChaosStage.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/ChaosStage.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/UFO.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/UFO.cpp
 
