--- a/LightYearsCore/CmakeLists.txt
+++ b/LightYearsCore/CmakeLists.txt
@@ -38,6 +38,12 @@ add_library(${LIGHT_YEARS_CORE_TARGET_NAME} STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/Application.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/Application.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/BackdropActor.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/BackdropActor.cpp
+    
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Framework/BackgroundLayer.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Framework/BackgroundLayer.cpp
+
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Widget/HUD.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Widget/HUD.cpp
 
